# implicit-ocaml

./: .gitignore  .merlin  MINIFB_BINDINGS_PLAN.md  build.sh  commit_and_push.sh  compile.ml  compile.mli  dune  expr.ml  expr.mli  fmt.sh  function.ml  function.mli  id.ml  id.mli  jitsy.ml  jitsy.mli  promote.sh  readme.md  run.sh  screenshot_test_demo.sh  test.ml  type.ml  type.mli
.claude/: settings.local.json
bounding_box/: bounding_box.ml  bounding_box.mli  box.ml  box.mli  compute_bb.ml  compute_bb.mli  dune  import.ml
eval/: compile.ml  compile.mli  dune  eval.ml  eval.mli
examples/: bulls_eye.ml  circle.connected.sexp  circle.ml  circle.shape.sexp  circle_dup.connected.sexp  circle_dup.ml  circle_dup.shape.sexp  circle_sub.connected.sexp  circle_sub.ml  circle_sub.shape.sexp  display.ml  dune  dune.inc  dune.inc.sexp  example_runner.ml  gen_dune.ml  intersection.connected.sexp  intersection.ml  intersection.shape.sexp  kissing-circles.connected.sexp  kissing-circles.shape.sexp  kissing_circles.connected.sexp  kissing_circles.ml  kissing_circles.shape.sexp  mix.connected.sexp  mix.ml  mix.shape.sexp  motion_blur.ml  motion_blur_test.connected.sexp  motion_blur_test.ml  motion_blur_test.shape.sexp  nested_circles.ml  scale.connected.sexp  scale.ml  scale.shape.sexp  union.connected.sexp  union.ml  union.shape.sexp
jitsy/: .merlin  backend.ml  compile.ml  compile.mli  compile.sh  dump_asm.sh  dune  expr.ml  expr.mli  expr_type.ml  function.ml  function.mli  id.ml  id.mli  jitsy.ml  jitsy.mli  ops.ml  ops.mli  test.ml  type.ml  type.mli
jitsy_native/: compile.ml  compile.mli  dune  jitsy_native.ml  jitsy_native.mli  test.ml
line_join/: bi_map.ml  bi_map.mli  dune  line_join.ml  line_join.mli
march/: .merlin  Makefile  dune  march.ml  march.mli  march_exe.ml  marching_squares.c  surface_net.c
march/libmarch/: Cargo.toml
march/libmarch/src/: lib.rs
minifb/: dune  minifb.ml  minifb.mli  minifb_bindings.ml  minifb_impl.ml  minifb_impl.mli  minifb_stubs_gen.ml  minifb_types.ml  test_minifb.ml
minifb-ffi/: Cargo.toml  build.rs  cbindgen.toml
minifb-ffi/include/: minifb_ffi.h
minifb-ffi/src/: lib.rs
pipeline/: dune  pipeline.ml  pipeline.mli  reshape.ml  reshape.mli
shape/: compile.ml  compile.mli  dune  eval.ml  eval.mli  scene.ml  shape.ml  types.ml  types.mli
shape_eval/: .merlin  chunk.ml  chunk.mli  compile.ml  compile.mli  dune  eval.ml  eval.mli  scene.mli  shape.ml  shape.mli  shape_eval.ml
tests/shape_native/: dune  shape_test_native.ml
types/: box.ml  box.mli  chunk.ml  chunk.mli  connected.ml  connected.mli  dune  float_bigarray.ml  float_bigarray.mli  layer.ml  layer.mli  line.ml  line.mli  line_buffer.ml  line_buffer.mli  matrix.ml  matrix.mli  point.ml  point.mli  profile.ml  scene.ml  scene.mli  shape.ml  shape.mli
utilities/: connected_to_svg.ml  dune  linebuf_to_connected.ml  linebuf_to_svg.ml  linebuf_validate.ml  scene_to_svg.ml  shape_to_linebuf.ml  svg.ml  utilities.ml
utilities/connected_to_svg/: connected_to_svg.ml  dune
utilities/linebuf_to_connected/: dune  linebuf_to_connected.ml
utilities/linebuf_to_svg/: dune  linebuf_to_svg.ml
utilities/linebuf_validate/: dune  linebuf_validate.ml
utilities/shape_to_linebuf/: dune  shape_to_linebuf.ml
