(executable
 (name gen_dune)
 (modules gen_dune display)
 (libraries core shared_types)
 (preprocess
  (pps ppx_jane)))

(library
 (name example_runner)
 (modules example_runner)
 (libraries core eval)
 (preprocess
  (pps ppx_jane)))

(rule
 (with-stdout-to
  dune.inc.gen
  (run ./gen_dune.exe)))

(alias
 (name runtest)
 (action
  (diff dune.inc.sexp dune.inc.gen)))

(include dune.inc.sexp)
