(library
 (name march)
 (modules march)
 (js_of_ocaml)
 (c_names marching_squares)
 (c_flags :standard -O1)
 (preprocess
  (pps ppx_jane))
 (libraries ctypes ctypes.foreign shared_types))

(executable
 (name march_js)
 (libraries core_kernel shared_types)
 (modules march_js)
 (js_of_ocaml)
 (preprocess
  (pps ppx_jane)))
